# amendMerge

./: README.md  pyproject.toml
amendmerge/: __init__.py  amendment.py  regex.py  utils.py
amendmerge/amendment_table/: __init__.py  html.py
amendmerge/ep_report/: __init__.py  html.py
amendmerge/resolution/: __init__.py  html.py
tests/: conftest.py  test_amending.py  test_ep_report_parsing.py  test_ep_reports.py  test_html_amendment_table_parsing.py  tets_utils.py
tests/data/: ep_reports_hand_coded.csv
tests/data/ep_reports_html/: 1994_299_A-4-1996-0146_EN.html  1997_193_A-4-1998-0435_EN.html  1998_158_A-4-1999-0075_EN.html  1998_226_A-4-1999-0031_EN.html  1998_284_A-4-1999-0087_EN.html  1998_28_A-4-1998-0334_EN.html  1998_303_A-4-1999-0139_EN.html  1999_20_A-4-1999-0254_EN.html  2000_178_A-5-2002-0129_EN.html  2001_86_A-5-2001-0417_EN.html  2003_172_A-5-2004-0171_EN.html  2003_234_A-5-2004-0194_EN.html  2004_183_A-6-2005-0304_EN.html  2004_202_A-6-2005-0067_EN.html  2004_223_A-6-2006-0157_EN.html  2004_240_A-6-2005-0410_EN.html  2005_167_A-6-2007-0339_EN.html  2005_17_A-6-2006-0043_EN.html  2005_203_A-6-2006-0168_EN.html  2006_209_A-6-2006-0401_EN.html  2007_201_A-6-2008-0081_EN.html  2007_38_A-6-2007-0285_EN.html  2008_128_A-6-2008-0515_EN.html  2008_221_A-6-2009-0218_EN.html  2009_105_A-7-2009-0048_EN.html  2009_63_A-7-2010-0035_EN.html  2010_214_A-7-2010-0316_EN.html  2010_282_A-7-2011-0260_EN.html  2010_298_A-7-2011-0246_EN.html  2010_318_A-7-2011-0041_EN.html  2010_368_A-7-2011-0252_EN.html  (+29 more)
tests/validation_merged/: instructions.txt
(+190 files in other folders)
