[tool.poetry]
name = "amendmerge"
version = "0.1.0"
description = ""
authors = ["Maximilian Haag <mail@mxhg.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
spacy = "^3.6.1"
pandas = "^2.0.3"
bs4 = "^0.0.1"
word2number = "^1.1"
regex = "^2023.10.3"
fuzzysearch = "^0.7.3"
textdistance = {extras = ["extras"], version = "^4.6.0"}
eucy = {git = "ssh://git@github.com/ghxm/euCy.git"}
lxml = "^4.9.3"


[tool.poetry.group.tests.dependencies]
pandas = "^2.0.3"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
